# shiritori-v1

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  build.sh  local.yml  production-hosted.yml  production.yml
.crts/: cert.crt  cert.key
.devcontainer/: devcontainer.json
.github/actions/backend-action/: action.yml
.github/actions/build-action/: action.yml
.github/actions/frontend-action/: action.yml
.github/workflows/: cd.yml  ci.yml
backend/: .pre-commit-config.yaml  .pylintrc  README.md  build.sh  manage.py  pyproject.toml
backend/.envs/.local/: .django  .postgres
backend/.envs/.production/: .django  .postgres
backend/config/: admin_views.py  api_router.py  asgi.py  celery_app.py  urls.py
backend/config/settings/: base.py  local.py  production.py  test.py
backend/requirements/: base.txt  local.txt  production.txt
backend/shiritori/contrib/sites/migrations/: 0002_alter_domain_unique.py  0003_set_site_domain_and_name.py
backend/shiritori/game/: apps.py  auth.py  consumers.py  events.py  helpers.py  models.py  routing.py  serializers.py  signals.py  tasks.py  utils.py  views.py
backend/shiritori/game/management/commands/: update_dictionary.py
backend/shiritori/game/migrations/: 0001_initial.py  0002_alter_gamesettings_turn_time_alter_player_name.py  0003_player_is_connected_alter_player_name.py  0004_game_task_id.py  0005_game_current_round_player_order_player_unique_order.py
backend/shiritori/game/models/: __init__.py  game.py  game_settings.py  game_word.py  player.py  text_choices.py  word.py
backend/shiritori/game/tests/: conftest.py  factories.py
backend/shiritori/game/tests/auto/: locators.py  test_full_game_flow.py
backend/shiritori/game/tests/intergration/: test_game_task.py  test_game_turn.py
backend/shiritori/game/tests/unit/: test_events.py  test_game_model.py  test_game_viewset.py  test_game_websocket_consumer.py  test_lobby_websocket_consumer.py  test_score_calculator.py
backend/shiritori/game/views/: __init__.py  game.py
backend/shiritori/utils/: __init__.py  abstract_model.py  id_generator.py  nano_id_field.py
compose/local/django/: Dockerfile
compose/local/nuxt/: Dockerfile  start
compose/production/django/: Dockerfile  entrypoint  start
compose/production/nuxt/: Dockerfile
compose/production/traefik/: traefik.yml
frontend/: .eslintrc  .prettierignore  .prettierrc  app.vue  histoire.config.ts  histoire.setup.ts  index.d.ts  nuxt.config.ts  package.json  pnpm-lock.yaml  schema.ts
frontend/.envs/.production/: .nuxt
frontend/assets/css/: theme.css
frontend/components/: CreateGameBtn.vue
frontend/components/button/: CreateGame.vue  ReturnToLobby.vue  StartGame.vue  joinGame.vue
frontend/components/dialog/: GameRules.vue
frontend/components/fieldset/: settingsGame.vue
frontend/components/form/: CreateGame.vue  settingsGame.vue
frontend/components/input/: BetterSelectButton.vue  FieldSelect.vue  FieldSlider.vue  FieldUsername.vue  FieldWord.vue  FieldWordBubble.vue  Slider.vue  Username.vue
frontend/components/list/: GamePlayers.vue  LobbyPlayers.vue  Words.vue  Wordsv2.vue
frontend/components/listItem/: GamePlayer.vue  GamePlayerAvatar.vue  GameWord.vue  LobbyPlayer.vue
frontend/components/listItem/GameWord/: GameWord.story.vue
frontend/components/overlay/: gameStartCountdown.vue
frontend/components/svg/: Logo.vue  Player.vue  RoomCode.vue  SecondaryLogo.vue  WordBubble.vue  spotlightWithPlayer.vue
frontend/components/table/: GameResults.vue
frontend/components/text/: PlayerScore.vue
frontend/components/timer/: TurnGame.vue
frontend/components/utility/: FormUIBlock.vue
frontend/composeables/: useApi.ts  useConfig.ts  useCreateGameForm.ts  useGameSettingsForm.ts  useGameTurnForm.ts  useJoinGameForm.ts
frontend/layouts/: finished.vue  joining.vue  lobby.vue  playing.vue  playingv2.vue
frontend/middleware/: gameExists.ts  setCrsfToken.global.ts
frontend/pages/: index.vue
frontend/pages/game/: Game.story.vue  [id].vue
frontend/plugins/: components.client.ts  primevue.client.ts
frontend/server/api/: isJoining.ts
frontend/stores/: useGameStore.ts  useGlobalStore.ts  useSocketStore.ts
frontend/stories/: Game.story.vue  GameWord.story.vue
frontend/tests/: useGameStore.test.ts
frontend/utils/: getSubmitFn.ts
